# helix

./: .gitignore  Cargo.toml
.config/: rail.toml
docs/: cargo-rail-integration-guide.md
docs/cargo-rail/: change-metrics.md  integration-guide.md
helix-core/: Cargo.toml
helix-dap/: Cargo.toml
helix-loader/: Cargo.toml
helix-lsp/: Cargo.toml
helix-term/: Cargo.toml
helix-tui/: Cargo.toml
helix-vcs/: Cargo.toml
helix-view/: Cargo.toml
